Made it so that minion can only be destroyed from the minion bundle, can teleport to minion, also saying you dont want seeds for the minion also is fixed. Next up is to change the rate of farming and mining, I cant have them mine 1-2 blocks a tick, thats to fast for tier 1.